--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Brandon's Portfolio Website</title>
 
     <!-- LOCAL -->
-    <link rel="stylesheet" href="/src/scss/main.css">
+    <link rel="stylesheet" href="./src/scss/main.css">
 </head>
 <body>
     <div id="page-wrap">
@@ -96,6 +96,6 @@
         </footer>
 
     </div>
-    <script src="/src/js/app.js"></script>
+    <script src="./src/js/app.js"></script>
 </body>
 </html>
