--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Logo -->
             <header class="main-header">
                 <div class="logo">
-                    <a href="./">Brandon Vue</a>
+                    <a href="index.html">Brandon Vue</a>
                 </div>
 
                 <!-- Hamburger Bar(s) -->
@@ -29,7 +29,7 @@
                     <!-- Links -->
                     <ul class="nav-links">
                         <li class="nav-link active">
-                            <a href="./">Home</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li class="nav-link">
                             <a href="#about-content">About</a>
