feat: added some links

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                                 <li><a href="https://reactjs.org/"><i class="fab fa-react"></i></a></li>
 
                                 <!-- Duplicates -->
-                                <li><i class="fab fa-html5"></i></li>
-                                <li><i class="fab fa-css3-alt"></i></li>
-                                <li><i class="fab fa-js-square"></i></li>
-                                <li><i class="fab fa-markdown"></i></li>
+                                <li><a href="https://en.wikipedia.org/wiki/HTML5"><i class="fab fa-html5"></i></a></li>
+                                <li><a href="https://en.wikipedia.org/wiki/CSS"><i class="fab fa-css3-alt"></i></a></li>
+                                <li><a href="https://en.wikipedia.org/wiki/JavaScript"><i class="fab fa-js-square"></i></a></li>
+                                <li><a href="https://www.markdownguide.org/"><i class="fab fa-markdown"></i></a></li>
                             </div>
                         </div>
                     </div>
