feat: open on new tabs

--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
                         <!-- JS Marquee Effect  -->
                         <div class="js-marquee">
                             <div class="marquee-content">
-                                <li><a href="https://en.wikipedia.org/wiki/HTML5"><i class="fab fa-html5"></i></a></li>
-                                <li><a href="https://en.wikipedia.org/wiki/CSS"><i class="fab fa-css3-alt"></i></a></li>
-                                <li><a href="https://en.wikipedia.org/wiki/JavaScript"><i class="fab fa-js-square"></i></a></li>
-                                <li><a href="https://www.markdownguide.org/"><i class="fab fa-markdown"></i></a></li>
-                                <li><a href="https://github.com/B-Vwj"><i class="fab fa-github"></i></a></li>
-                                <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)"><i class="fab fa-java"></i></a></li>
-                                <li><a href="https://en.wikipedia.org/wiki/Python_(programming_language)"><i class="fab fa-python"></i></a></li>
-                                <li><a href="https://getbootstrap.com/"><i class="fab fa-bootstrap"></i></a></li>
-                                <li><a href="https://reactjs.org/"><i class="fab fa-react"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/HTML5"><i class="fab fa-html5"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/CSS"><i class="fab fa-css3-alt"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><i class="fab fa-js-square"></i></a></li>
+                                <li><a target="_blank" href="https://www.markdownguide.org/"><i class="fab fa-markdown"></i></a></li>
+                                <li><a target="_blank" href="https://github.com/B-Vwj"><i class="fab fa-github"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Java_(programming_language)"><i class="fab fa-java"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/Python_(programming_language)"><i class="fab fa-python"></i></a></li>
+                                <li><a target="_blank" href="https://getbootstrap.com/"><i class="fab fa-bootstrap"></i></a></li>
+                                <li><a target="_blank" href="https://reactjs.org/"><i class="fab fa-react"></i></a></li>
 
                                 <!-- Duplicates -->
-                                <li><a href="https://en.wikipedia.org/wiki/HTML5"><i class="fab fa-html5"></i></a></li>
-                                <li><a href="https://en.wikipedia.org/wiki/CSS"><i class="fab fa-css3-alt"></i></a></li>
-                                <li><a href="https://en.wikipedia.org/wiki/JavaScript"><i class="fab fa-js-square"></i></a></li>
-                                <li><a href="https://www.markdownguide.org/"><i class="fab fa-markdown"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/HTML5"><i class="fab fa-html5"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/CSS"><i class="fab fa-css3-alt"></i></a></li>
+                                <li><a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><i class="fab fa-js-square"></i></a></li>
+                                <li><a target="_blank" href="https://www.markdownguide.org/"><i class="fab fa-markdown"></i></a></li>
                             </div>
                         </div>
                     </div>
