feat: portfolio gallery added

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                             <a href="#about-content">About</a>
                         </li>
                         <li class="nav-link">
-                            <a href="#portfolio-content">Portfolio</a>
+                            <a href="#portfolio-section">Portfolio</a>
                         </li>
-                        <li class="nav-link">
+                        <!-- <li class="nav-link">
                             <a href="/contact">Contact</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </nav>
             </header>
@@ -83,11 +83,26 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Portfolio Gallery -->
                 <section class="portfolio-section">
-                    <div id="portfolio-content">
-                        <p>Project 1</p>
-                        <p>Project 2</p>
-                        <p>Project 3</p>
+                    <div class="row">
+                        <!-- Column 1 -->
+                        <div class="column">
+                            <div class="content">
+                                <img src="./src/images/iitoko-dori-screenshot.png" alt="" style="width: 100%">
+                                <h3><a href="https://b-vwj.github.io/iitoko-dori/">Iitoko-Dori</a></h3>
+                                <p>Academic presentation about Japanese culture is now available as a website!</p>
+                            </div>
+                        </div>
+                        <!-- Column 2 -->
+                        <div class="column">
+                            <div class="content">
+                                <img src="./src/images/get_connected_msp_screenshot.png" alt="" style="width: 100%">
+                                <h3><a href="https://get-connected-msp.bubbleapps.io/">Get-Connected-msp</a></h3>
+                                <p>Created to provide resources for those that are affected by Covid-19.</p>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <!-- <section class="contact">
