chore: more fixes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- Logo -->
             <header class="main-header">
                 <div class="logo">
-                    <a href="/VueWorks">Brandon Vue</a>
+                    <a href="/index.html">Brandon Vue</a>
                 </div>
 
                 <!-- Hamburger Bar(s) -->
